# agentic-rag-platform

./: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260513_194043_c0bc1c2f4472_initial_schema.py
docs/: api.md  architecture.md  deploy-checklist.md  deploy.md  upwork-case-study.md
services/api/: Dockerfile
services/api/src/api/: broker.py  config.py  main.py
services/api/src/api/agent/: memory.py  prompts.py  rag_agent.py  tools.py
services/api/src/api/db/: opensearch_store.py  session.py
services/api/src/api/routes/: chat.py  documents.py  health.py  jobs.py  sessions.py  upload.py
services/worker/: Dockerfile
services/worker/src/worker/: config.py  main.py  scheduler.py
services/worker/src/worker/db/: session.py
shared/db_models/: __init__.py  base.py  document.py  job.py  log.py  session.py
shared/guardrails/: __init__.py  cost_ceiling.py  proxy.py  rate_limit.py  turnstile.py
shared/indexing/: __init__.py  docx_converter.py  page_extractor.py  page_parser.py  pipeline.py
shared/tasks/: __init__.py  cleanup.py  ingest_upload.py
web/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: AppShell.tsx  Badge.tsx  Button.tsx  ChatPanel.tsx  ChatThread.tsx  Composer.tsx  ConversationList.tsx  DocumentList.tsx  Logo.tsx  RetrievalTrace.tsx  Sidebar.tsx  UploadButton.tsx
web/src/hooks/: useChat.tsx  useDocuments.ts  useSessions.ts
web/src/lib/: api.ts  cn.ts  turnstile.ts
